Add symptoms + FAQ sections for search/AI discoverability
Front-loads exact error text and greyed-out-button symptoms near the
top (Google snippet + AI Overview weight recent/prominent content
heavily), and adds an explicit Q&A block, which is the format both
classic search featured snippets and generative AI answer engines
extract most reliably.